--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "nameit",
     "version": "0.1.0",
     "private": true,
-    "homepage": "http://Sudipta2002.github.io/nameit/",
+    "homepage": "http://Sudipta2002.github.io/nameIt/",
     "dependencies": {
         "@rstacruz/startup-name-generator": "0.3.0",
         "@testing-library/jest-dom": "^5.14.1",
